# ChessChallenge

./: .gitignore  PERFORMANCE_ANALYSIS.md  README.md  article.aux  article.out  article.tex  benchmark-native.sh  build.sbt  c02af158-431f-48d2-8c14-7bccb4d16697  chess_problem_1463.cnf  enhancement-ai.md  project.config  pyproject.toml  shared_dependencies.md  test.cnf  train_model.py
project/: plugins.sbt
src/main/resources/: application.conf  chess_kernel.cu
src/main/resources/public/: index.html
src/main/resources/public/css/: style.css
src/main/resources/public/js/: script.js
src/main/scala/: App.scala  WebFrontEnd.scala
src/main/scala/pakkio/chesschallenge/: BestSolutionSoFar.scala  Board.scala  CarefulOptTest.scala  CarefulOptimizedSolver.scala  DebugSolutions.scala  GPUSolver.scala  GuidedExhaustiveSolver.scala  HighlyOptimizedParallelSolution.scala  MCTSSolver.scala  Main.scala  MinimalOptimizedSolver.scala  NativeCompatibleSolver.scala  ParallelSolution.scala  Piece.scala  QuickSATTest.scala  QuickTest.scala  SATSolver.scala  SimpleMLSolver.scala  SmartMCTSSolver.scala  SmartOrderSolver.scala  Solution.scala  SymmetryExample.scala  SymmetryVerification.scala  TakeWhileInclusive.scala  Test7x7.scala  Test7x7ML.scala  TestBestSolution.scala  TestGPU.scala  TestGuidedExhaustive.scala  TestMCTS.scala  TestNative.scala  TestSAT.scala  TestSmartMCTS.scala  TestSmartOrder.scala  TheChallenge.scala  TrainingDataCollector.scala  ValidateSmartMCTS.scala  Verify7x7Original.scala
src/test/scala/pakkio/: MyStream.scala  WaterPourProblem.scala
(+29 files in other folders)
